SAE-501 - Fix responsive layout issues on index page

--- a/developpement-front-s5/sae-501/code/src/styles/index.css
+++ b/developpement-front-s5/sae-501/code/src/styles/index.css
@@ -1,4 +1,5 @@
 .jpo-banniere {
+
     height: 45.625rem;
     position: relative;
     display: flex;
@@ -10,6 +11,7 @@
     @media (max-width: theme('screens.lg')) {
         background-position: top center;
         background-size: 110%;
+        height: 20rem;
     }
     text-decoration: none;
     overflow: hidden;
